# advent-of-code

./: .gitignore  Program.fs  README.md  _Program.fs  advent-of-code.fsproj  advent-of-code.sln  run.sh
2015/: main.ts  package-lock.json  package.json  solution.ts  tsconfig.json
2015/01/: index.ts
2015/02/: index.ts
2015/03/: index.ts
2015/04/: index.ts
2015/05/: index.ts
2015/06/: index.ts
2015/07/: index.ts
2015/08/: index.ts
2015/09/: index.ts
2015/10/: index.ts
2015/11/: index.ts
2015/12/: index.ts
2015/13/: index.ts
2015/14/: index.ts
2015/15/: index.ts
2015/16/: index.ts
2015/17/: index.ts
2015/18/: index.ts
2015/19/: index.ts
2015/20/: index.ts
2015/21/: index.ts
2015/22/: index.ts
2016/: CMakeLists.txt  Solution.cpp  Solution.h  main.cpp  run.sh
2016/01/: Day01.cpp  Day01.h  main.cpp
2017/: build.zig  test_arraylist.zig
2017/src/: main.zig  solution.zig
2017/src/01/: day.zig
2017/src/02/: day.zig
2018/: Cargo.toml
2018/src/: main.rs  solution.rs
2019/: Program.cs  Solution.cs
2019/Day01/: Day01.cs
2020/: .gitignore  mix.exs
2020/lib/: aoc2020.ex  solution.ex
2023/Day01/: Solution.fs  answers
2023/Day02/: Solution.fs  answers
2023/Day03/: Solution.fs  answers
2023/Day04/: Solution.fs  answers
2024/: main.go
2024/01/: day.go
2024/02/: day.go
2024/03/: day.go
2024/04/: day.go
2024/internal/: solution.go
2025/: .gitignore  settings.gradle.kts
2025/app/: build.gradle.kts
Lib/: Solver.fs
runner/: config.go  executors.go  go.mod  harness.go  main.go  results.go  table.go
(+11 files in other folders)
